# bevy_game_dungeon

./: Cargo.toml  README.MD
assets/: stone.aseprite
assets/level/: 000.lvl  001.lvl  start.lvl
src/: controls.rs  lib.rs  loading.rs  main.rs  menu.rs  movement.rs
src/level/: asset.rs  change.rs  create.rs  interactables.rs  mod.rs
