[package]
name = "bevy_game_dungeon"
version = "0.1.0"
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = [
    "bevy/dynamic_linking",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
bevy_asset_loader = {version = "0.20", features = ["3d"]}
bevy-inspector-egui = { git = "https://github.com/Aztro-dev/bevy-inspector-egui.git", branch = "main" }
bevy_flycam = { git = "https://github.com/arcashka/bevy_flycam.git", branch = "bevy_main_0_13" }
bevy_easings = "0.13"

webbrowser = { version = "0.8", features = ["hardened"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.52"