[package]
name = "bevy_game_dungeon"
version = "0.2.0"
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = [
    "bevy/dynamic_linking",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14"
bevy_asset_loader = {version = "0.21", features = ["3d"]}
bevy-inspector-egui = "0.25"
bevy_flycam = "0.14"
bevy_easings = "0.14"

webbrowser = { version = "0.8", features = ["hardened"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.52"